# machine_learning_and_data_science

./: .gitignore  README.md  pyproject.toml
calculus_w1_lab/: C2_W1_Lab_1_differentiation_in_python.ipynb
calculus_w2_assignment/: C2_W2_Assignment.md
calculus_w2_lab/: C2_W2_Lab_2_Optimization_Using_Gradient_Descent_in_Two_Variables.ipynb  C2_W2_Lab_2_Optimization_Using_Gradient_Descent_in_Two_Variables.md
calculus_w2_lib/: C2_W2_Lab_1_Optimization_Using_Gradient_Descent_in_One_Variable.ipynb  C2_W2_Lab_1_Optimization_Using_Gradient_Descent_in_One_Variable.md
calculus_w3_assignment/: C2_W3_Assignment.ipynb  C2_W3_Assignment.md
calculus_w3_lab/: C2_W3_Lab_1_Regression_with_Perceptron.ipynb  C2_W3_Lab_1_Regression_with_Perceptron.md  C2_W3_Lab_2_Classification_with_Perceptron.ipynb  C2_W3_Lab_2_Classification_with_Perceptron.md
calculus_w3_lib/: C2_W3_Lab_1_Regression_with_Perceptron.md  C2_W3_Lab_2_Classification_with_Perceptron.md  C2_W3_Lab_3_Optimization_Using_Newtons_Method.ipynb  C2_W3_Lab_3_Optimization_Using_Newtons_Method.md
linear_algebra_w1_lab/: C1_W1_Lab_1_introduction_to_numpy_arrays.ipynb  C1_W1_Lab_2_linear_systems_as_matrices.ipynb
linear_algebra_w2_assignment/: C1W2_Assignment.ipynb
linear_algebra_w2_lab/: C1W2_UGL_solving_linear_systems_3_variables.ipynb
linear_algebra_w3_assignment/: C1W3_Assignment.ipynb
linear_algebra_w4_assignment/: C1W4_Assignment.ipynb
linear_algebra_w4_lib/: C1_W4_Lab_1_Interpreting_eigenvalues_and_eigenvectors.ipynb
machine_learning_calculus_w1_assignment/: C2_W1_Assignment.ipynb  C2_W1_Assignment.md  (+1 more)
(+37 files in other folders)
