[project]
name = "machine-learning-and-data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ipympl>=0.9.3",
    "jax>=0.4.13",
    "jupyter>=1.1.1",
    "matplotlib>=3.7.5",
    "nbconvert>=7.16.6",
    "nltk>=3.9.1",
    "numpy>=1.24.4",
    "opencv-python>=4.11.0.86",
    "pandas>=2.0.3",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "seaborn>=0.13.2",
    "sympy>=1.13.3",
]
